# OSPSuite.CPP-Toolbox

./: .Rbuildignore  .gitignore  .gitmodules  DESCRIPTION  NAMESPACE  OSPSuite.CPP-Toolbox_Linux.nuspec  OSPSuite.CPP-Toolbox_Windows.nuspec  README.md  appveyor.yml  buildLinux.sh  buildWindows.bat  build_Linux.sh  build_Windows.bat  createNugetPackage_Linux.sh  createNugetPackage_Windows.bat  packages.config  restorePackages.bat  restorePackages.sh
R/: SimulationCompiled.R  exportSimulationCpp.R
man/: ospsuiteCpp-package.Rd
src/: InterfaceR.cpp  Makevars
src/CPP-Toolbox/: CMakeLists.txt  OSPSuite.CPP-Toolbox.Ubuntu18.nuspec
src/CPP-Toolbox/include/: Integrator.h  Interface.h  Model.h  ThreadPool.h
src/CPP-Toolbox/src/: Integrator.cpp  InterfaceMatlab.cpp  Model.cpp  ThreadPool.cpp
src/CPP-Toolbox/src/Experimental/: ExportCpp.cpp  ExpressionParser.cpp  ImportXML.cpp
src/OSPSuite.CPP-Toolbox/: CMakeLists.txt  OSPSuite.CPP-Toolbox.Ubuntu18.nuspec  OSPSuite.CPP-Toolbox_Ubuntu18.nuspec
src/OSPSuite.CPP-Toolbox/include/: Expression.h  ImportXML.h  Integrator.h  Model.h  ModelDerived.h  ThreadPool.h
src/OSPSuite.CPP-Toolbox/src/: Integrator.cpp  Interface.cpp
src/OSPSuite.CPP-Toolbox/src/Experimental/: Expression.cpp
src/SuiteSparse/: Makefile
vignettes/: export-simulation.Rmd
